removed large media query

--- a/css/codeup-design.css
+++ b/css/codeup-design.css
@@ -1,4 +1,149 @@
-@media (max-width: 1199.98px) {
+@media (max-width: 575.98px) {
+    .main-container{
+        text-align: center;
+        background-color: #f0f0f0;
+    }
+    .code-up-design{
+        font-family: 'Abel', sans-serif;
+        font-size: 45px;
+    }
+    .services-work-blog-contact{
+        margin-top: 1em;
+        font-family: 'Abel', sans-serif;
+    }
+    .visual-design{
+        margin-top: 1em;
+        font-family: 'Anton', sans-serif;
+        font-size: 40px;
+
+    }
+    .from-park-city{
+        margin-top: 1em;
+        font-family: 'Anton', sans-serif;
+        font-size: 30px;
+
+    }
+    .design-develop-support-host{
+        margin-top: 2em;
+    }
+    .selected-work{
+        margin-top: 4em;
+        font-family: 'Abel', sans-serif;
+    }
+    .featured-project {
+        font-family: 'Abel', sans-serif;
+        margin-left: 1em;
+
+    }
+    .nav-link {
+        color: black;
+    }
+    #green-apples{
+        margin-left: 7em;
+        margin-top: 1em;
+        background-color: #e6e6e6;
+
+    }
+    #nav-bar1 {
+        text-decoration-color: black;
+    }
+
+    #cir-1 {
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        display: inline-block;
+        border: 5px solid white;
+        font-family: 'Anton', sans-serif;
+        font-size: medium;
+        background-color: #E6563B;
+        color: white;
+        margin-right: .5em;
+        margin-bottom: .5em;
+    }
+    #cir-2 {
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        display: inline-block;
+        border: 5px solid white;
+        font-family: 'Anton', sans-serif;
+        font-size: medium;
+        background-color: #DF9F3D;
+        color: white;
+        margin-bottom: .5em;
+    }
+    #cir-3 {
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        display: inline-block;
+        border: 5px solid white;
+        font-family: 'Anton', sans-serif;
+        font-size: medium;
+        background-color: #7cb06c;
+        color: white;
+        margin-right: .5em;
+        margin-bottom: .5em;
+    }
+    #cir-4 {
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        display: inline-block;
+        border: 5px solid white;
+        font-family: 'Anton', sans-serif;
+        font-size: medium;
+        background-color: #00aba9;
+        color: white;
+        margin-bottom: .5em;
+    }
+    .four-circles {
+        font-family: 'Anton', sans-serif;
+        display: inline-block;
+        font-size: 50px;
+    }
+    #dot-1 {
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        display: inline-block;
+        background-color: #E6563B;
+        font-family: 'Anton', sans-serif;
+        font-size: 8px;
+        margin-left: 4em;
+
+    }
+    #dot-2 {
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        display: inline-block;
+        background-color: #DF9F3D;
+        font-family: 'Anton', sans-serif;
+        font-size: 8px;
+    }
+    #dot-3 {
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        display: inline-block;
+        background-color: #7cb06c;
+        font-family: 'Anton', sans-serif;
+        font-size: 8px;
+    }
+    #dot-4 {
+        height: 25px;
+        width: 25px;
+        border-radius: 50%;
+        display: inline-block;
+        background-color: #00aba9;
+        font-family: 'Anton', sans-serif;
+        font-size: 8px;
+
+    }
+}
+/*@media (max-width: 1199.98px) {*/
     * {
         box-sizing: border-box;
     }
@@ -202,4 +347,4 @@
         /*font-weight: lighter;*/
         font-size: 8px;
     }
-}
+/*}*/
